--- a/src/components/WelcomeScreen/Welcome.module.scss
+++ b/src/components/WelcomeScreen/Welcome.module.scss
@@ -12,6 +12,17 @@
     margin: 5px 0;
 }
 
+.error {
+    font-size: 20px;
+    color: red;
+    margin: 5px 0;
+    width: 60%;
+
+    @include xs {
+        width: 90%;
+    }
+}
+
 .flex {
     display: flex;
     justify-content: space-between;
@@ -133,6 +144,7 @@ $mobile-width: 90%;
                     outline: none;
                     border: none;
                     width: 100%;
+                    background-color: transparent;
 
                     &::placeholder {
                         text-transform: capitalize;
