--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,14 +3,17 @@
 .section {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    position: relative;
 
 }
 
 .main {
     background-color: #FBFBFB;
-    width: 85%;
+    width: 80%;
     min-height: 100vh;
     padding: 25px;
+    margin-left: 20%;
 
     @include xs {
         width: 100%;
@@ -18,9 +21,17 @@
 }
 
 .aside {
-    overflow: scroll;
-    width: 15%;
-    min-height: 100%;
+    width: 20%;
+    position: fixed; 
+    height: 600px;
+    overflow: auto;
+    padding-bottom: 100px;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+  
     @include xs {
         display: none;
     }
