--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -11,12 +11,15 @@
 .main {
     background-color: #FBFBFB;
     width: 80%;
-    min-height: 100vh;
+    height: 800px;
     padding: 25px;
     margin-left: 20%;
+    overflow: scroll;
+    position: fixed; 
 
     @include xs {
         width: 100%;
+        margin-left: 0;
     }
 }
 
