--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,5 +1,7 @@
 @import "../../styles/variables";
 
+
+
 .wrapper {
     width: 100%;
     margin-top: 30px;
@@ -14,6 +16,7 @@
     }
 }
 
+
 .list__item {
     padding-left: calc(3% + 15px);
 
@@ -25,8 +28,9 @@
         gap: 10px;
         width: 100%;
         margin-bottom: 10px;
-
-        a {
+         cursor: pointer;
+         
+        a, span {
             text-decoration: none;
             color: $len-blue;
             font-size: 16px;
