--- a/src/components/Utils/Table/Table.module.scss
+++ b/src/components/Utils/Table/Table.module.scss
@@ -19,15 +19,20 @@
     line-height: 18.08px;
     font-family: $work-sans;
     color: $len-text;
+    padding-bottom: 5px;
 }
+
+
 
 .data {
     text-align: start;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 18.08px;
     font-family: $work-sans;
     color: $len-text;
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(33, 63, 125, 0.1);
 }
 
 
@@ -35,4 +40,14 @@
     margin-left: 5px;
     margin-top: 2px;
     cursor: pointer;
+}
+
+.menu {
+    cursor: pointer;
+}
+
+.hide {
+    @include xs {
+        display: none;
+    }
 }
