--- a/src/components/Utils/Utils.module.scss
+++ b/src/components/Utils/Utils.module.scss
@@ -6,7 +6,6 @@
     align-items: center;
     justify-content: space-between;
     margin: 10px 0;
-
         font-size: 12px;
         font-weight: 400;
         line-height: 18.08px;
@@ -17,15 +16,29 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            align-self: center;
-            gap: 3px;
+            gap: 15px;
 
-            button {
+            .skip {
                 display: inline-flex;
                 align-items: center;
+                cursor: pointer;
+            }
+
+            .active {
+                cursor: pointer;
+                color: #545F7D;
+                font-weight: 600;
+                text-decoration: underline;
+
+            }
+
+            .notActive {
+                cursor: pointer;
             }
         }
-      
+
+    
+   
 
     label {
         display: flex;
@@ -48,4 +61,5 @@
             }
         }
     }
+
 }
