--- a/src/components/Utils/Table/Table.module.scss
+++ b/src/components/Utils/Table/Table.module.scss
@@ -51,3 +51,40 @@
         display: none;
     }
 }
+
+
+.menuList {
+
+    background: #FFFFFF;
+    border: 1px solid rgba(33, 63, 125, 0.06);
+    box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+    border-radius: 4px;
+    padding: 10px;
+
+    width: 130px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+   
+  
+
+    li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+        color: $len-text;
+        font-size: 12px;
+        cursor: pointer;
+
+        &:hover {
+            color: $len-blue;
+        }
+
+        a {
+            color: $len-text;
+            font-size: 12px;
+            text-decoration: none; 
+        }
+    }
+}
