FEAT: Added filter component

--- a/src/components/Users/UserDetails/UserDetails.module.scss
+++ b/src/components/Users/UserDetails/UserDetails.module.scss
@@ -157,6 +157,7 @@ position: relative;
     border-radius: 4px;
     padding: 40px;
     margin-top: 50px;
+    position: relative;
 
 
     .section {
