Done with responsive and mobile nav

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -16,7 +16,7 @@
     margin-left: 20%;
     overflow: scroll;
     position: fixed; 
-    padding-bottom: 300px;
+    // padding-bottom: 300px;
   
 
     @include xs {
