--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -12,3 +12,14 @@
         gap: 10px;
     }
 }
+
+.main {
+    overflow: hidden;
+    .table {
+
+        @include xs {
+        max-width: 100vw;
+        overflow: auto;
+        }
+    }
+}
