--- a/src/components/Utils/Table/Table.module.scss
+++ b/src/components/Utils/Table/Table.module.scss
@@ -8,6 +8,8 @@
     width: 100%;
     margin-top : 30px;
     padding: 20px;
+
+
    
 }
 
@@ -20,8 +22,16 @@
     font-family: $work-sans;
     color: $len-text;
     padding-bottom: 5px;
-}
 
+    @include xs {
+        padding: 10px;
+        &:nth-child(1), &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+            display: none;
+        }
+    }
+
+    
+}
 
 
 .data {
@@ -33,6 +43,14 @@
     color: $len-text;
     padding: 10px 0;
     border-bottom: 1px solid rgba(33, 63, 125, 0.1);
+
+    @include xs {
+        padding: 10px;
+
+       &:nth-child(1), &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+        display: none;
+    }
+        }
 }
 
 
@@ -51,4 +69,39 @@
         display: none;
     }
 }
+
+
+
+// status
+
+.inactive, .pending, .blacklisted, .active {
+    font-size: 12px;
+    border-radius: 100px;
+    text-align: center;
+    text-transform: capitalize;
+    display: inline-block;
+    padding: 3px 8px;
+}
+
+.pending {
+    color: rgba(233, 178, 0, 1);
+    background-color:  rgba(233, 178, 0, .1);
+}
+
+.blacklisted {
+    color: $len-red;  
+    background-color:rgba(228, 3, 59, .1); 
+  }
+  
+  .active {
+    color:rgba(57, 205, 98, 1);
+    background-color: rgba(57, 205, 98, .1);
+  }
+  
+  .inactive {
+    color: $len-text;
+    background: rgba(84, 95, 125, .1);
+
+  }
+  
 
