--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,10 +1,24 @@
 @import "../../styles/variables";
 
 
+.menu {
+    @include xs {
+        background-color: #fff;
+        position: absolute;
+        width: 100vw;
+        height: 100%;
+        padding-bottom: 50px;
+        top: 1px;
+        left: 0;
+        overflow-y: scroll;
+    }
+}
 
 .wrapper {
     width: 100%;
     margin-top: 30px;
+
+  
 
     p {
         color: $len-text;
@@ -13,6 +27,8 @@
         text-transform: uppercase;
         padding-left: calc(3% + 15px);
         margin: 10px 0;
+
+       
     }
 }
 
@@ -22,7 +38,7 @@
 
     li {
         list-style: none;
-        display: flex;
+        display: inline-flex;
         flex-direction: row;
         align-items: center;
         gap: 10px;
@@ -37,6 +53,7 @@
             font-family: $work-sans;
             line-height: 19px;
             font-weight: 400;
+            display: inline-block
         }
     }
 }
