--- a/src/components/Users/UserDetails/UserDetails.module.scss
+++ b/src/components/Users/UserDetails/UserDetails.module.scss
@@ -4,6 +4,11 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+
+    @include xs {
+      width: 50px;
+      height: 50px;
+    }
 }
 
 .line {
@@ -11,8 +16,18 @@
     width: 1px;
      background-color: #545F7D;;
      opacity: .2;
+
+     @include xs {
+      display: none;
+     }
 }
 
+.stars {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  justify-content: start;
+}
 
 .mt6 {
   margin-top: 30px;
@@ -20,6 +35,7 @@
 
 
 .main {
+  overflow: hidden;
   .header {
     p {
       color: $len-text;
@@ -34,9 +50,19 @@
       align-items: center;
       margin: 15px 0;
 
+      @include xs {
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+      }
+
       h3 {
         color: $len-blue;
         font-size: 24px;
+
+        @include xs {
+          font-size: 18px;
+        }
       }
 
       .buttons {
@@ -89,6 +115,12 @@ border-radius: 4px;
 padding: 40px;
 position: relative;
 
+overflow: auto;
+
+@include xs {
+  flex-wrap: wrap;
+  padding: 15px;
+}
 
     .identifier {
         display: flex;
@@ -98,6 +130,10 @@ position: relative;
         h3 {
             color: $len-blue;
             font-size: 22px;
+
+            @include xs {
+              font-size: 18px;
+            }
         }
 
         p {
@@ -107,23 +143,51 @@ position: relative;
     }
 
     .rating {
+
+      
         p {
             color: $len-text;
             font-size: 14px;
+        }
+
+        @include xs {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 20px;
+        
         }
     }
 
 
     .account {
+      
         h3 {
             color: $len-blue;
             font-size: 22px;
+
+            @include xs {
+              font-size: 18px;
+            }
         }
 
         p {
             color: $len-text;
             font-size: 14px;
         }
+
+        @include xs {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+        }
+
+      
+    }
+
+    @include xs {
+      padding-bottom: 50px;
+
     }
 
 }
@@ -132,16 +196,30 @@ position: relative;
     position: absolute;
     bottom: 0;
     width: 90%;
-
+   
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    @include xs {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      width: 100vw;
+      overflow-x: scroll;
+    }
 
     p {
         color: rgba(0, 0, 0, 0.8);
         font-size: 16px;
         margin-bottom: 5px;
         cursor: pointer;
+        width: 100%;
+
+
+        @include xs {
+          font-size: 12px;
+        }
     }
    
 
@@ -159,10 +237,16 @@ position: relative;
     margin-top: 50px;
     position: relative;
 
+    @include xs {
+      overflow-x: scroll;
+      padding: 15px;
+     
+    }
+
 
     .section {
 
-        
+
             h3 {
                 color: $len-blue;
                 font-size: 16px;
@@ -174,22 +258,47 @@ position: relative;
         display: flex;
         flex-direction: row;
         margin-top: 20px;
+      
+
+        @include xs {
+          display: flex;
+        flex-direction: column;
+          flex-wrap: wrap;
+          gap: 20px;
+
+       
+        }
 
         table {
             border-collapse: collapse;
             table-layout: fixed;
             width: 100%;
           }
+
+
+          tr {
+            @include xs {
+            display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+               gap: 20px;
+          }
+        }
+
           td {
             padding: 2px  8px 8px 0;
-          
             width: 20%;
+             
+
+            @include xs {
+              width: 50%;
+            }
+          
 
             .title {
                 color: $len-text;
             font-size: 12px;
-            text-transform: uppercase;
-          
+            text-transform: uppercase; 
             }
 
             .info {
