--- a/src/components/Utils/Utils.module.scss
+++ b/src/components/Utils/Utils.module.scss
@@ -1,65 +1,64 @@
 @import "../../styles/variables";
 
 .pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18.08px;
+  font-family: $work-sans;
+  color: $len-text;
+
+  @include xs {
+    flex-direction: column-reverse;
+    gap: 15px;
+  }
+
+  .buttons {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    margin: 10px 0;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 18.08px;
-        font-family: $work-sans;
-        color: $len-text;
+    gap: 15px;
 
-        .buttons {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 15px;
-
-            .skip {
-                display: inline-flex;
-                align-items: center;
-                cursor: pointer;
-            }
-
-            .active {
-                cursor: pointer;
-                color: #545F7D;
-                font-weight: 600;
-                text-decoration: underline;
-
-            }
-
-            .notActive {
-                cursor: pointer;
-            }
-        }
-
-    
-   
-
-    label {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 5px;
-
-
-        select {
-            outline: none;
-            border: 1px solid $len-text;
-            border-radius: 5px;
-            padding: 2px;
-            cursor: pointer;
-            color: $len-text;
-
-            option {
-                cursor: pointer;
-                color: $len-text;
-            }
-        }
+    .skip {
+      display: inline-flex;
+      align-items: center;
+      cursor: pointer;
     }
 
+    .active {
+      cursor: pointer;
+      color: #545f7d;
+      font-weight: 600;
+      text-decoration: underline;
+    }
+
+    .notActive {
+      cursor: pointer;
+    }
+  }
+
+  label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+
+    select {
+      outline: none;
+      border: 1px solid $len-text;
+      border-radius: 5px;
+      padding: 2px;
+      cursor: pointer;
+      color: $len-text;
+
+      option {
+        cursor: pointer;
+        color: $len-text;
+      }
+    }
+  }
 }
