--- a/src/components/Users/UserDetails/UserDetails.module.scss
+++ b/src/components/Users/UserDetails/UserDetails.module.scss
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   gap: 3px;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .mt6 {
@@ -52,7 +52,7 @@
 
       @include xs {
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         gap: 10px;
       }
 
