--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,13 +1,15 @@
 @import "../../styles/variables";
 
 
+
+
 .menu {
     @include xs {
         background-color: #fff;
         position: absolute;
         width: 100vw;
         height: 100%;
-        padding-bottom: 50px;
+        padding-bottom: 200px;
         top: 1px;
         left: 0;
         overflow-y: scroll;
@@ -36,6 +38,11 @@
 .list__item {
     padding-left: calc(3% + 15px);
 
+    .activeLink {
+       background-color: rgba(57, 205, 204, .1);
+       border-left: 2px solid rgba(57, 205, 204, 1);
+    }
+
     li {
         list-style: none;
         display: inline-flex;
@@ -45,6 +52,7 @@
         width: 100%;
         margin-bottom: 10px;
          cursor: pointer;
+         padding: 3px;
          
         a, span {
             text-decoration: none;
